Fix alignment of print subs bundle payment button

--- a/frontend/assets/stylesheets/components/_bundle-thank-you.scss
+++ b/frontend/assets/stylesheets/components/_bundle-thank-you.scss
@@ -51,7 +51,7 @@
     }
 }
 
-.bundle-button {
+.bundle-button-resume {
     margin-top: $gs-baseline;
     margin-bottom: $gs-baseline;
     margin-left: $gs-gutter * 5;
